plugins {
	id 'java'
	id 'idea'
	id 'org.springframework.boot' version '3.1.5'
	id 'io.spring.dependency-management' version '1.1.3'
	// id 'org.graalvm.buildtools.native' version '0.9.22'
}

group = 'com.sigursoft'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

repositories {
	mavenCentral()
}

dependencies {
	// API
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	// TESTS
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
    // JUnit 5
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    // Mockito
    testImplementation 'org.mockito:mockito-core'
    testImplementation 'org.mockito:mockito-junit-jupiter'
    // Wiremock
    testImplementation 'org.wiremock:wiremock:3.2.0'
}

test {
    jvmArgs = ['-Xshare:off', '-XX:+EnableDynamicAgentLoading']
    useJUnitPlatform()
	testLogging.events "passed", "skipped", "failed"
}
